tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/stderr.expected
Error:
    Parser error in file: tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence Error is:
ValidatorError tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:10:53:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                     ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing )

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing ]

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing of

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:12:53:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                     ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing )

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing ]

tests/parse_print/autogen-bilals-fixed/8d9aeec8a4cae4f6527e31d510e8df23/8d9aeec8a4cae4f6527e31d510e8df23.eprime.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing of
